...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="orderdetail_refund_detail">%1$s via %2$s</string>
    <string name="orderdetail_net">Net</string>
    <string name="orderdetail_discount_items">(%1$s)</string>
    <string name="orderdetail_customer_provided_note">Customer provided note</string>
    <string name="orderdetail_customer_image_contentdesc">Customer profile image</string>
    <string name="orderdetail_note_hint">Compose an order note</string>
    <string name="orderdetail_note_private">Private</string>
    <string name="orderdetail_note_public">To customer</string>
    <string name="orderdetail_note_system">System</string>
    <string name="orderdetail_order_notes">Order notes</string>
    <string name="orderdetail_order_fulfillment">Fulfill Order #%s</string>
    <string name="orderdetail_payment_cleared">Payment Cleared</string>
    <string name="orderdetail_show_billing">Show Billing</string>
    <string name="orderdetail_hide_billing">Hide Billing</string>
    <string name="orderdetail_add_note">Add a note</string>
...
