...
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <!-- Orders List View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ordersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <co.innoshop.android.widgets.WCEmptyView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
...
