...
                    android:contentDescription="@string/order_shipment_tracking_section_cd"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <!-- Order Notes -->
                <co.innoshop.android.ui.orders.notes.OrderDetailOrderNoteListView
                    android:id="@+id/orderDetail_noteList"
                    style="@style/Woo.Card.WithoutPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
...
